--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
         <section class="testimonials">
 
-          <h3 class="h3 testimonials-title">Testimonials</h3>
+          <h3 class="h3 testimonials-title">Teamates</h3>
 
           <ul class="testimonials-list has-scrollbar">
 
