--- a/index.html
+++ b/index.html
@@ -129,19 +129,20 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+              <a href="https://www.facebook.com/share/1DjDNi3JQu/"><ion-icon name="logo-facebook"></ion-icon></a>
+              
             </a>
           </li>
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+             <a href="https://x.com/NaveenK1437?s=09"><ion-icon name="logo-twitter"></ion-icon></a>
             </a>
           </li>
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
+             <a href="https://www.instagram.com/__hindu__naveen__?igsh=MWdhY3F6M2tud21pMQ=="><ion-icon name="logo-instagram"></ion-icon></a> 
             </a>
           </li>
 
@@ -209,7 +210,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
+            I'm Web Developer and Web  Designer from Sydney, Australia, working in web development and print media.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
@@ -511,41 +512,39 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Amritsar Group of Colleges  (Punjab Technical University)</h4>
 
-              <span>2007 — 2008</span>
+              <span>2023 — 2026</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                I Pursuing my Bachelor in Computer Application from Amritsar Group of Colleges.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">HIgh School (Bihar School Examination Board)</h4>
 
-              <span>2006 — 2007</span>
+              <span>2020 - 2022</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                I have completed my 12th from Khemchand Tarachand College,Raxaul,Bihar.
+                It is one of the most reputed College In my City,Raxaul.
+                i chose Arts stream in my 12th.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Matriculation(Centeral Board of secoundary Examination) </h4>
 
-              <span>2002 — 2004</span>
+              <span>2020</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                I have completed my 10th from Cambridge Public School,Raxaul,Bihar.
+                It is one of the most reputed College In my City,Raxaul.
               </p>
 
             </li>
