--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-             <a href="https://www.instagram.com/__hindu__naveen__?igsh=MWdhY3F6M2tud21pMQ=="><ion-icon name="logo-instagram"></ion-icon></a> 
+             <a style="color: white;" href="https://www.instagram.com/__hindu__naveen__?igsh=MWdhY3F6M2tud21pMQ=="><ion-icon name="logo-instagram"></ion-icon></a> 
             </a>
 
           </li>
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <a href="https://www.facebook.com/share/1DjDNi3JQu/"><ion-icon name="logo-facebook"></ion-icon></a>
+              <a style="color: white;" href="https://www.facebook.com/share/1DjDNi3JQu/"><ion-icon name="logo-facebook"></ion-icon></a>
               
             </a>
           </li>
 
           <li class="social-item">
             <a href="#" class="social-link">
-             <a href="https://www.linkedin.com/in/naveen-kumar-311a5b2b2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><ion-icon name="logo-linkedin"></ion-icon></a>
+             <a style="color: white;" href="https://www.linkedin.com/in/naveen-kumar-311a5b2b2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><ion-icon name="logo-linkedin"></ion-icon></a>
             </a>
           </li>
 
           
           <li class="social-item">
             <a href="#" class="social-link">
-             <a href="https://github.com/naveenk1437"><ion-icon name="logo-github"></ion-icon></a>
+             <a style="color: white;" href="https://github.com/naveenk1437"><ion-icon name="logo-github"></ion-icon></a>
             </a>
           </li>
 
