--- a/index.html
+++ b/index.html
@@ -574,45 +574,30 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">LIC Insurance Advisor</h4>
 
-              <span>2015 — Present</span>
+              <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                An LIC (Life Insurance Corporation of India) insurance advisor, also known as an agent, helps individuals and families choose and understand LIC insurance policies, providing financial advice and guidance to meet their needs.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Computer Teacher</h4>
 
-              <span>2013 — 2015</span>
+              <span>2022 — 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                I have 1 year experience as a computer teacher in
+                Kushal Yuva Program (KYP) is a Bihar Skill Development Mission (BSDM) initiative aimed at enhancing the employability of youth aged 15-28, focusing on life skills, communication skills (English & Hindi), and basic computer literacy.
               </p>
 
             </li>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
+            
 
           </ol>
 
