--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/my-pic.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/portfolio.jpg" type="image/x-icon">
 
   <!--
     - custom css link
