--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
+                    <a href="./Jarves AI/index.html" target="_blank"><ion-icon name="eye-outline"></ion-icon></a>
                   </div>
 
                   <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
