--- a/index.html
+++ b/index.html
@@ -353,9 +353,14 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Enthusiastic and detail-oriented web developer with a strong foundation in HTML, CSS, JavaScript, 
-                    and responsive design. Seeking an opportunity to apply my skills in front-end and back-end 
-                    development to create engaging and user-friendly web experiences.
+                    I am a web developer and website designer.
+                    I create responsive, modern, and user-friendly websites.
+                    With clean code and creative design,
+                    I bring ideas to life on the web.
+                    Skilled in HTML, CSS, JavaScript, and UI/UX design.
+                    Focused on performance, accessibility, and aesthetics.
+                    Passionate about solving problems through code.
+                    Always learning and pushing creative boundaries.
                   </p>
                 </div>
 
